--- a/WWDC Scholars 2015/WWDC Scholars 2015/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Main.storyboard
@@ -505,6 +505,7 @@
                             <constraint firstItem="yNf-Rd-82i" firstAttribute="top" secondItem="gLv-Ne-sYq" secondAttribute="bottom" constant="10" id="0mN-aq-K98"/>
                             <constraint firstItem="fmQ-4b-iqt" firstAttribute="top" secondItem="enb-uJ-dXP" secondAttribute="bottom" constant="22" id="4mM-RP-yLz"/>
                             <constraint firstItem="fmQ-4b-iqt" firstAttribute="centerX" secondItem="enb-uJ-dXP" secondAttribute="centerX" id="7by-em-Xv2"/>
+                            <constraint firstAttribute="centerX" secondItem="fmQ-4b-iqt" secondAttribute="centerX" id="7wV-dk-sv0"/>
                             <constraint firstItem="enb-uJ-dXP" firstAttribute="top" secondItem="yNf-Rd-82i" secondAttribute="bottom" constant="1037" id="E3Y-yN-doE"/>
                             <constraint firstItem="lxM-Mw-dl9" firstAttribute="height" secondItem="Oer-10-ZHw" secondAttribute="height" constant="246" id="ISO-Dy-DeQ"/>
                             <constraint firstAttribute="centerX" secondItem="lxM-Mw-dl9" secondAttribute="centerX" id="Mas-V0-9Vs"/>
@@ -5150,7 +5151,7 @@ Two times at WWDC!</string>
                             </scrollView>
                             <pageControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="gBZ-hX-PFk">
                                 <rect key="frame" x="280" y="555" width="39" height="37"/>
-                                <color key="pageIndicatorTintColor" patternImage="B47B3D41-9784-43CE-9553-E22720D5C7C0" colorSpace="pattern"/>
+                                <color key="pageIndicatorTintColor" patternImage="2D23B892-7AF3-41A1-B0DE-9928E78CF37E" colorSpace="pattern"/>
                                 <color key="currentPageIndicatorTintColor" red="0.0" green="0.0" blue="0.66825143909999996" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
                         </subviews>
@@ -5179,10 +5180,7 @@ Two times at WWDC!</string>
         </scene>
     </scenes>
     <resources>
-        <image name="AlexanderZimin" width="83" height="83"/>
-        <image name="AmanJain" width="83" height="83"/>
-        <image name="AndrewWalker" width="83" height="83"/>
-        <image name="B47B3D41-9784-43CE-9553-E22720D5C7C0" width="512" height="512">
+        <image name="2D23B892-7AF3-41A1-B0DE-9928E78CF37E" width="512" height="512">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -22732,6 +22730,9 @@ EA65ABAOwQAQDs4AEA7TABAO1QAQDtcAEA7cABAO5AAQDucAEA7sABAO9AAQDvcAEA8JABAPDAAQDxEA
 AAAAAAAEAQAAAAAAAABCAAAAAAAAAAAAAAAAABAPEw
 </mutableData>
         </image>
+        <image name="AlexanderZimin" width="83" height="83"/>
+        <image name="AmanJain" width="83" height="83"/>
+        <image name="AndrewWalker" width="83" height="83"/>
         <image name="CharleyHutchison" width="83" height="83"/>
         <image name="CloseButton" width="35" height="35"/>
         <image name="Data" width="59" height="58"/>
